--- a/config-raft2/docker/DockerFile-ClientApp-GreenAirline
+++ b/config-raft2/docker/DockerFile-ClientApp-GreenAirline
@@ -8,7 +8,7 @@ RUN ["mkdir", "/usr/src/app/tls/Admin"]
 RUN ["mkdir", "/usr/src/app/tls/User1"]
 RUN ["mkdir", "/usr/src/app/block-seq"]
 
-COPY ./fabric-gen/crypto-config/peerOrganizations/green-airline.com/users/Admin@green-airline.com/tls/ /usr/src/app/tls/Admin/
-COPY ./fabric-gen/crypto-config/peerOrganizations/green-airline.com/users/User1@green-airline.com/tls/ /usr/src/app/tls/User1/
+COPY ./fabric-gen/crypto-config/peerOrganizations/greenairline.com/users/Admin@greenairline.com/tls/ /usr/src/app/tls/Admin/
+COPY ./fabric-gen/crypto-config/peerOrganizations/greenairline.com/users/User1@greenairline.com/tls/ /usr/src/app/tls/User1/
  
 COPY ./bin/client-app-0.1.jar /usr/lib/clientapp.jar
