--- a/config-raft2/kube/peer0-blue-airline.yaml
+++ b/config-raft2/kube/peer0-blue-airline.yaml
@@ -35,13 +35,13 @@ spec:
             - name: CORE_VM_ENDPOINT
               value: unix:///host/var/run/docker.sock
             - name: CORE_PEER_ID
-              value: "peer0.blue-airline.com"
+              value: "peer0.blueairline.com"
             - name: CORE_PEER_LOCALMSPID
-              value: "blue-airline"
+              value: "BlueAirlineMSP"
             - name: CORE_PEER_ADDRESS
-              value: "peer0.blue-airline.com:7051"
+              value: "peer0.blueairline.com:7051"
             - name: CORE_PEER_GOSSIP_EXTERNALENDPOINT
-              value: "peer0.blue-airline.com:7051"
+              value: "peer0.blueairline.com:7051"
 #            - name: CORE_PEER_GOSSIP_BOOTSTRAP
 #              value: "peer0-blue-airline:7051"
             - name: CORE_PEER_GOSSIP_USELEADERELECTION
@@ -138,7 +138,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: peer0-blue-airline
+  name: peer0-blueairline
   labels:
     app: fabric
 spec:
